awesome refactoring
